# sim

./: AGENTS.md  Cargo.toml  README.md
.braid/: .gitignore  config.toml
.braid/issues/: sim-16v9.md  sim-74oh.md  sim-7pun.md  sim-a80r.md  sim-adcj.md  sim-ax70.md  sim-cw48.md  sim-gm3s.md  sim-je9s.md  sim-jm69.md  sim-jtkh.md  sim-mi0t.md  sim-miel.md  sim-pokb.md  sim-r1kx.md  sim-sa42.md  sim-vgn5.md  sim-xv91.md  sim-yr08.md
.codex/environments/: environment.toml
.cursor/: environment.json
.cursor/rules/: lowercase.mdc
.github/workflows/: ci.yml
docs/: game_design.md
docs/design/: open-ideas.md  planetary-development.md  surface-orbit-logistics.md
src/: app.rs  background.rs  buildings.rs  cli.rs  colors.rs  command.rs  control_state.rs  debug.rs  egui_layer.rs  entity.rs  entity_setup.rs  event_handling.rs  game_loop.rs  infrastructure.rs  initialization.rs  input.rs  interface.rs  load.rs  location.rs  main.rs  map_generation.rs  palette.rs  ships.rs  sim_clock.rs  simulation.rs  tileset.rs  ui.rs  viewport.rs  world.rs
src/event_handling/: build_menu.rs  main_menu.rs  mining_route_menu.rs  mod.rs  playing.rs  shipyard_menu.rs
src/gfx/: atlas.rs  line.wgsl  line_batch.rs  mod.rs  sprite.wgsl  sprite_batch.rs  world_renderer.rs
src/input/: mod.rs
src/interface/: build.rs  credits_panel.rs  debug_overlay.rs  game_menu.rs  intro.rs  main_menu.rs  mining_route_menu.rs  mod.rs  pause_menu.rs  resources_panel.rs  selected_object_panel.rs  shipyard_menu.rs  sim_speed_panel.rs  stardate_panel.rs
src/render/: background.rs  mod.rs  tileset.rs  (+1 more)
(+12 files in other folders)
