[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["image"]
