[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "29"
winit = "0.30"
